RESOLVED FIXED49047
[Qt][QtTestBrowser] Don't erase incorrect url in the Url Bar
https://bugs.webkit.org/show_bug.cgi?id=49047
Summary [Qt][QtTestBrowser] Don't erase incorrect url in the Url Bar
Yi Shen
Reported 2010-11-04 18:52:03 PDT
if loading some wrong url (e.g. file:///adfsadfsdfx), the browser fails and changes the url in the urlbar to 'about:blank'. It is very annoying that you have to enter the whole url again, especially when using the qttestbrowser for testing on a cellphone -- VKB is typo-prone and too slow. It might be better for always displaying the wrong url when loading fails, then user can fix the typo instead of reentering a long url.
Attachments
first try (1.27 KB, patch)
2010-11-04 18:54 PDT, Yi Shen
no flags
updated (1.24 KB, patch)
2010-11-05 11:45 PDT, Yi Shen
no flags
Yi Shen
Comment 1 2010-11-04 18:54:55 PDT
Created attachment 73029 [details] first try
Yi Shen
Comment 2 2010-11-05 11:45:08 PDT
Created attachment 73093 [details] updated
Andreas Kling
Comment 3 2010-11-09 10:21:08 PST
Comment on attachment 73093 [details] updated Nice to get rid of this itch, r=me
WebKit Commit Bot
Comment 4 2010-11-09 10:55:10 PST
Comment on attachment 73093 [details] updated Clearing flags on attachment: 73093 Committed r71649: <http://trac.webkit.org/changeset/71649>
WebKit Commit Bot
Comment 5 2010-11-09 10:55:15 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.