2010-11-09  Yi Shen  <yi.4.shen@nokia.com>

Reviewed by Andreas Kling.

        [Qt][QtTestBrowser] Don't erase incorrect url in the Url Bar
        https://bugs.webkit.org/show_bug.cgi?id=49047

        * QtTestBrowser/mainwindow.cpp:
        (MainWindow::setAddressUrl):

Canonical link: https://commits.webkit.org/62136@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@71649 268f45cc-cd09-0410-ab3c-d52691b4dbfc